@@ -1,3 +1,4 @@
+- crypto support
 v0.1.3 (2017-11-24)
 - add parameters keyvalue (generage kv parameter representing the encrypted parameters passed in) and hide (to sumpress displaying the decrypted parameters)
 - add duration and resolution
